--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- SweetAlert2 CDN -->
 
@@ -118,6 +122,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/sector_news">Sector News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/sector_news">Sector News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/simulation">Simulation</a>
             </li>
           </ul>
         </div>
